--- a/.github/workflows/hello-world.docker.ci.yml
+++ b/.github/workflows/hello-world.docker.ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3.3.0
 
       - name: Run my own container action
-        id: action
+        id: hello-action
         uses: ./hello-world-docker-action
         with:
           who-to-greet: '@wulfland'
